[package]
name = "anvel"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
anyhow = "1.0.75"
async-std = "1.12.0"
clap = { version = "4.4.11", features = ["derive"] }
current_platform = "0.2.0"
futures = "0.3.29"
local-ip-address = "0.5.6"
open = "5.0.1"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
