[package]
name = "zippy"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.66"
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_icons = { version = "0.1.0", features = [
    "AiCarryOutTwotone",
    "BiGraphql",
    "BiFilePlusSolid",
    "Bs1Circle",
    "BsFolder",
    "BsSun",
    "BsMoonStars",
    "FaBarsSolid",
    "ImPagebreak",
    "ImPageBreak",
    "IoColorWand",
    "OcAlertSm",
] }
leptos_meta = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
web-sys = "0.3.65"
