[package]
name = "zippy"
version = "1.0.2"
edition = "2021"
description = "A networking software."
license = "MIT/Apache-2.0"
authors = [
    "imrany <imranmat254@gmail.com>",
]
repository = "https://github.com/imrany/zippy/web"
readme = "README.md"
categories = ["command-line-utilities", "wasm", "web-programming"]
keywords = ["wasm", "bundler", "web", "build-tool", "compiler"]
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.66"
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
serde = "1.0.195"
serde_json = "1.0.111"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.65", features = [
    "Navigator",
    "Window",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
] }
