[package]
name = "anvel"
version = "0.1.0"
edition = "2021"
description = "Anvel is a productivity software that connects you to people in your network and enable file sharing and collaboration."
license = "MIT"
authors = [
    "imrany <imranmat254@gmail.com>",
]
repository = "https://github.com/imrany/zippy/web"
readme = "README.md"
categories = ["command-line-utilities", "wasm", "web-programming"]
keywords = ["wasm", "bundler", "web", "build-tool", "compiler"]
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.66"
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
serde = "1.0.195"
# serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.111"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.65", features = [
    "Navigator",
    "Window",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
] }
